2011-08-31 Koichiro Kikuchi <koichiro@rworks.jp>

	* include/functions_api.php: Merged from trunk. Fixed join parameter
	  to avoid generating unusable module lines.

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_agente.php: Fixed URL injection 
	vulnerability replacing safe_output for safe_output_html

2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* godmode/agentes/module_manager_editor_network.php: disabled snmp community
	when set the version 3, and added tooltip to show help in Auth and privacy
	pass about the eight characters minimum.

2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* include/functions.php: fixed the snmpwalk for version 3, the function
	need empty string instead null.

2011-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* include/javascript/pandora_modules.js: fixed get the parameters
	snmp3_auth_method and snmp3_privacy_method.

2011-07-18  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed filter codification 
	problem deleting base64 encoder for bug 3339329

2011-07-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_operations.php: Fixed acl last fix 
	warnings

2011-07-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_operations.php
	godmode/massive/massive_delete_profiles.php
	godmode/massive/massive_add_profiles.php: Restringed profiles massive
	operations only to admins for bug: 3294464

2011-07-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_gis.php: Fixed Gis map creation when has agents
	in a layer.
	
	Fixes: #3293392
	
	* include/functions_networkmap.php: Fixes networkmap when agent
	name has blank spaces.
	
	Merged from trunk.

2011-07-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Changed length on module name and 