@@ -240,7 +240,9 @@ if ($isFunctionPolicies !== ENTERPRISE_NOT_HOOK) {
 		$table->head[6] = __('Action');
 		$table->head[7] = __('Last fired');
 		$table->head[8] = __('Status');
-		$table->head[9] = __('Validate');
+		if (check_acl ($config["id_user"], $id_group, "AW") == 1) {
+			$table->head[9] = __('Validate');
+		}
 		
 		$table->align[8] = 'center';
 		$table->align[9] = 'center';
@@ -267,7 +269,9 @@ if ($isFunctionPolicies !== ENTERPRISE_NOT_HOOK) {
 		$table->head[5] = __('Action');
 		$table->head[6] = __('Last fired');
 		$table->head[7] = __('Status');
-		$table->head[8] = __('Validate');
+		if (check_acl ($config["id_user"], $id_group, "AW") == 1) {
+			$table->head[8] = __('Validate');
+		}
 		
 		$table->align[7] = 'center';
 		$table->align[8] = 'center';
@@ -299,7 +303,9 @@ else
 		$table->head[5] = __('Action');
 		$table->head[6] = __('Last fired');
 		$table->head[7] = __('Status');
-		$table->head[8] = __('Validate');
+		if (check_acl ($config["id_user"], $id_group, "AW") == 1) {
+			$table->head[8] = __('Validate');
+		}
 		
 		$table->align[7] = 'center';
 		$table->align[8] = 'center';
@@ -324,7 +330,9 @@ else
 		$table->head[4] = __('Action');
 		$table->head[5] = __('Last fired');
 		$table->head[6] = __('Status');
-		$table->head[7] = __('Validate');
+		if (check_acl ($config["id_user"], $id_group, "AW") == 1) {
+			$table->head[7] = __('Validate');
+		}
 		
 		$table->align[6] = 'center';
 		$table->align[7] = 'center';
@@ -385,10 +393,12 @@ if (!empty ($table->data)) {
 	print_table ($table);
 }
 
-if (count($alerts['alerts_simple']) > 0 || count($alerts['alerts_combined']) > 0) {
-	echo '<div class="action-buttons" style="width: '.$table->width.';">';
-	print_submit_button (__('Validate'), 'alert_validate', false, 'class="sub upd"', false);
-	echo '</div>';
+if (check_acl ($config["id_user"], $id_group, "AW") == 1) {
+	if (count($alerts['alerts_simple']) > 0 || count($alerts['alerts_combined']) > 0) {
+		echo '<div class="action-buttons" style="width: '.$table->width.';">';
+		print_submit_button (__('Validate'), 'alert_validate', false, 'class="sub upd"', false);
+		echo '</div>';
+	}
 }
 
 echo '</form>';
